--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-row-title{flex:1 1 auto;min-width:0;position:relative;overflow:hidden;display:flex;align-items:center}
 .log-row-title .display{display:block;width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1.35;font-size:14px;--scroll-distance:0px}
 .log-row-title.is-adventure .display{font-weight:700}
-.log-row-title.is-activity .display{font-weight:600}
+.log-row-title.is-activity .display{font-weight:600;color:var(--muted)}
 .log-row-title.scrollable:hover .display{animation:log-row-scroll 6s ease-in-out alternate forwards}
 @media (prefers-reduced-motion:reduce){
   .log-row-title.scrollable:hover .display{animation:none}
