Use focus-visible styling for FAB menu

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ body.modal-open #addCardMenu{display:none;}
 .fab-menu{position:fixed;right:24px;bottom:100px;display:flex;flex-direction:column;gap:6px;min-width:200px;padding:8px 0;border-radius:12px;background:#fff;box-shadow:var(--shadow2);border:1px solid var(--border);z-index:65}
 .fab-menu[hidden]{display:none}
 .fab-menu button{padding:10px 16px;text-align:left;background:none;border:none;font:inherit;color:var(--ink);cursor:pointer;transition:background var(--dur) var(--ease),color var(--dur) var(--ease);display:flex;align-items:center;gap:10px}
-.fab-menu button:hover,.fab-menu button:focus{background:#eef4ff;color:var(--primary);outline:none}
+.fab-menu button:hover,.fab-menu button:focus-visible{background:#eef4ff;color:var(--primary);outline:none}
 
 /* Activity cards (compact header) */
 .pill.muted{background:#eef1f6;color:#475569;border-color:#dce2ee}
